maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:16: error: ':' expected but ',' found.
def marquer(xb,yb) {
              ^JediEscaper:31: error: identifier expected but '}' found.
}
^