maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
def trouve_baggle():(Int,Int) = {
  var x:Int = 0
  var y:Int = 0
  for (i <- 0 to getMondeLargeur() - 1) {
    for (j <- 0 to getMondeHauteur() - 1) {
      if (aBiscuit(i,j) == true) {
        x = i
        y = j
      }
    }
  }
  return (x, y);
}

def marquer(xb,yb) {
  var i:Int = 0
  var (x,y):(Int,Int) = (xb,yb)
  setIndication(x,y,i)
}

override def run() {
  var (xb,yb):(Int,Int) = trouve_baggle()
}